--- a/index.html
+++ b/index.html
@@ -71,5 +71,15 @@
         />
       </div>
     </section>
+
+    <div class="icons">
+      <a href="#"><i class="ri-instagram-fill"></i></a>
+      <a href="#"><i class="ri-linkedin-box-fill"></i></a>
+      <a href="#"><i class="ri-spotify-fill"></i></a>
+    </div>
+
+    <div class="scroll-down">
+      <a href="#"><i class="ri-arrow-down-circle-fill"></i></a>
+    </div>
   </body>
 </html>
