Agregamos transiciones para diferentes tamanos de pantalla

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <header>
       <!-- Logo -->
       <a href="#" class="logo">NATALY LOPEZ </a>
+
       <!-- Truco para que el boton de Menu sea clickeable sin usar JS -->
       <input type="checkbox" name="checkbox" id="menu-toggle" />
-      <label for="menu-toggle" class="menu-icon-action"
-        ><div class="bx bx-menu" id="menu-icon"></div
-      ></label>
-      <div class="bx bx-menu" id="menu-icon"></div>
+      <label for="menu-toggle" class="menu-icon-action">
+        <div class="bx bx-menu" id="menu-icon"></div>
+      </label>
 
       <!-- Barra de Navegacion -->
       <ul class="navlist">
