Cambio de foto de perfil y publicacion en portal web

--- a/index.html
+++ b/index.html
@@ -65,17 +65,20 @@
       </div>
 
       <div class="hero-img">
-        <img
-          src="/assets/imgs/Foto proyecto final.jpg"
-          alt="nataly lopez foto"
-        />
+        <img src="/assets/imgs/Designer.png" alt="nataly lopez foto" />
       </div>
     </section>
 
     <div class="icons">
-      <a href="#"><i class="ri-instagram-fill"></i></a>
+      <a href="https://www.instagram.com/natalopez508/?hl=en" target="_blank"
+        ><i class="ri-instagram-fill"></i
+      ></a>
       <a href="#"><i class="ri-linkedin-box-fill"></i></a>
-      <a href="#"><i class="ri-spotify-fill"></i></a>
+      <a
+        href="https://open.spotify.com/playlist/6OZhp4jJonNivqgUW1ZiMJ"
+        target="_blank"
+        ><i class="ri-spotify-fill"></i
+      ></a>
     </div>
 
     <div class="scroll-down">
