Cambie forndo, removi nombre de la seccion titutlo y cambie la foto de perfil

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="hero-text">
         <h5>Maquetadora Web</h5>
         <h4>HTML CSS JavaScript</h4>
-        <h1>Nataly Lopez</h1>
+        <h1>Nataly Lopez Eraso</h1>
         <p>
           Diseño y desarrollo de sitios web tanto <br />
           corporativos como personales,<br />
@@ -65,7 +65,7 @@
       </div>
 
       <div class="hero-img">
-        <img src="/assets/imgs/Designer.png" alt="nataly lopez foto" />
+        <img src="\assets\imgs\image (1).png" alt="nataly lopez foto" />
       </div>
     </section>
 
