--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
       <a href="https://www.instagram.com/natalopez508/?hl=en" target="_blank"
         ><i class="ri-instagram-fill"></i
       ></a>
-      <a href="#"><i class="ri-linkedin-box-fill"></i></a>
+      <a href="www.linkedin.com/in/nataly-fernanda-lopez-eraso-1429981a"
+        ><i class="ri-linkedin-box-fill"></i
+      ></a>
       <a
         href="https://open.spotify.com/playlist/6OZhp4jJonNivqgUW1ZiMJ"
         target="_blank"
